--- a/TEDx/about.html
+++ b/TEDx/about.html
@@ -1,29 +1,32 @@
 <!doctype html>
-<html>
+<html><!-- InstanceBegin template="/Templates/TEDxNCCU.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
 <link rel="icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
-
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>TEDxNCCU</title>
+<!-- InstanceEndEditable -->
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"-->
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
-<link href="css/tedxnccu2.css" rel="stylesheet" type="text/css"><style>
-
+<link href="css/tedxnccu2.css" rel="stylesheet" type="text/css">
+<!-- InstanceBeginEditable name="head" -->
+<style>
 </style>
+<!-- InstanceEndEditable -->
 </head>
 <body>
+
 <nav>
 	<div id="nav" class="container clearfix">
 		<div style="float:left;">
-				<img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
+			<img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
 		</div>
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
 				<li><a href="index.html">首頁</a></li>
-				
 				<li><a href="spnsors.html">贊助夥伴</a>
 				</li>
 				<li class="withSubNav clearfix">
@@ -33,7 +36,7 @@
 					</ul>
 				</li>
 				<li class="withSubNav clearfix">
-					<a href="index.html">文章分享</a>
+					<a href="blog/index.html">文章分享</a>
 					<ul class="subNav">
 						<li><a href="#">部落格</a></li>
 						<li><a href="#">TED TALK</a></li>
@@ -48,15 +51,14 @@
 						<li><a href="contact.html">聯繫我們</a></li>
 					</ul>
 				</li>
-
+	
 			</ul>
 		</div>
 	</div>
 </nav>
 <div style="width:100%; height:44px;">
 </div>
-
-
+<!-- InstanceBeginEditable name="content" -->
 <div id="banner">
 	<div class="bannerPic-small-cover">
 		<div class="container">
@@ -103,6 +105,8 @@
 		</div>
 	</div>
 </div>
+<!-- InstanceEndEditable -->
+
 
 <footer class="outer-small">
 	<div class="container clearfix">
@@ -110,20 +114,27 @@
 			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
 			<li><a href="sponsor.html">贊助我們</a></li>
 			<li><a href="contact.html">聯絡我們</a></li>
+			<li><a href="manageLogin.html">管理模式</a></li>
 		</ul>
 	</div>
 </footer>
 
+<!-- InstanceBeginEditable name="content-aft" -->
+<!-- InstanceEndEditable -->
+
+
+<!-- InstanceBeginEditable name="js-1" -->
+<script type="text/javascript">
+</script>
+<!-- InstanceEndEditable -->
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <!--script src="js/bootstrap.min.js" type="text/javascript"></script-->
 <script src="js/parse-1.2.8.min.js" type="text/javascript"></script>
-<script src="js/TEDxNCCU.js" type="text/javascript"></script>
+<script src="js/TEDxNCCU.js" type="text/javascript"></script> 
+<!-- InstanceBeginEditable name="js-2" -->
 <script type="text/javascript">
-
 </script>
-
-
-
+<!-- InstanceEndEditable -->
 </body>
-</html>
+<!-- InstanceEnd --></html>
