--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -30,7 +30,7 @@
 .activeInfo { display:block; z-index:6;}
 .Info > h3 { color:#FF0000;}
 
-
+.pics { position:absolute; height:540px; width:960px;}
 </style>
 </head>
 <body>
@@ -67,13 +67,13 @@
 						<li><a href="contact.html">聯繫我們</a></li>
 					</ul>
 				</li>
-				<li></a></li>	
 			</ul>
 		</div>
 	</div>
 </nav>
 <div style="width:100%; height:44px;">
 </div>
+
 
 
 			<!--div id="picShow">
@@ -93,17 +93,19 @@
 
 
 
-<div id="banner" class="shd-large">
+<div id="banner" >
 	<!--div class="container">
 		<img id="large-logo"  style="position:absolute; z-index:20; top:60px; opacity:1" src="img/TEDxNCCU5.png" />
 	</div-->
-	<div class="container pics">
-		<div id="pic1" class="Pic picshowPic showingPic"><img width="960" src="img/pic1.jpg"></div>
-		<div id="pic2" class="Pic picshowPic" ><img width="960" src="img/pic2.jpg"></div>
-		<div id="pic3" class="Pic picshowPic"><img width="960" src="img/pic3.jpg"></div>
+	<div class="container">
+		<div class="pics shd-large" >
+			<div id="pic1" class="Pic picshowPic showingPic"><img width="960" src="img/pic1.jpg"></div>
+			<div id="pic2" class="Pic picshowPic" ><img width="960" src="img/pic2.jpg"></div>
+			<div id="pic3" class="Pic picshowPic"><img width="960" src="img/pic3.jpg"></div>
+		</div>
 	</div>
 	
-	<div class="container shd-large"  style="height:540px; position:relative;">
+	<div class="container "  style="height:540px; position:relative;">
 		<div id="infos">
 			<div id="info1" class="box Info activeInfo">
 				<h3>TEDxNCCU</h3>
@@ -192,6 +194,7 @@
 			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
 			<li><a href="sponsor.html">贊助我們</a></li>
 			<li><a href="contact.html">聯絡我們</a></li>
+			<li><a href="manageLogin.html">管理模式</a></li>
 		</ul>
 	</div>
 </footer>
